数据库切换到 postgresql, json库切换到Jackson